# stm32f4_ov2640

./: CMakeLists.txt  main.c  ov2640.ino  ov2640_regs.h  read_image.py
mocks/: CMakeLists.txt  hal_mock.h  hal_mock_general.c  hal_mock_general.h  hal_mock_gpio.c  hal_mock_gpio.h  hal_mock_i2c.c  hal_mock_i2c.h  hal_mock_spi.c  hal_mock_spi.h  hal_stub_dma.h
ov2640/: CMakeLists.txt  ov2640.c  ov2640.h  ov2640_regs.c  ov2640_regs.h
ov2640_tests/: CMakeLists.txt  test_ov2640.c
tests/: CMakeLists.txt  test_all.c  test_ov2640.c
tests/tests_hal_mock/: CMakeLists.txt  test_hal_mock_general.c  test_hal_mock_general.h  test_hal_mock_gpio.c  test_hal_mock_gpio.h  test_hal_mock_i2c.c  test_hal_mock_i2c.h  test_hal_mock_spi.c  test_hal_mock_spi.h  tests_hal_mock.h
tests/tests_ov2640/: CMakeLists.txt  test_ov2640.c  test_ov2640.h
